# cpp-project-template

./: CMakeLists.txt
cmake/: FindGoogleMock.cmake  FindGoogleTest.cmake  FindLog4CPP.cmake
test/: PrettyPrint.hpp  SampleTest.cpp  TestUtils.hpp  main.cpp
